cabal-version:       2.4
name:                LCraft
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.2.1

common common-options
  build-depends:       base ^>= 4.16.0.0
                     , data
                     , effectful-core
                     , primitive
                     , text ^>= 2.0
                     , flatparse
                     , bytestring
                     , mason
                     , network
                     , network-simple
                     , template-haskell
                     , uuid
                     , vector
                     , containers
                     , zlib
                     , containers
                     , unordered-containers
                     , deepseq
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       --Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     LCraft
                     , Block.GlobalPalette
                     , Block.Position
                     , Chunk.Internal
                     , Chunk.Position
                     , Chunk.Section
                     , Effect.Async
                     , Effect.ChunkManager
                     , Effect.EntityId
                     , Effect.IO.File
                     , Effect.IO.File.Effect
                     , Effect.IO.File.Handle
                     , Effect.IO.File.OpenFlags
                     , Effect.IO.RegionFile
                     , Effect.Labelled
                     , Effect.World
                     , Entity.Internal
                     , Network
                     , Network.Effect.Network
                     , Network.Effect.Network.Effect
                     , Network.Effect.Network.IO
                     , Network.Effect.Packet
                     , Network.Handler.Login
                     , Network.Handler.Play
                     , Network.Packet.Client.Login
                     , Network.Packet.Client.Play
                     , Network.Packet.Client.Play.ChunkData
                     , Network.Packet.Client.Play.JoinGame
                     , Network.Packet.Server.Handshake
                     , Network.Packet.Server.Login
                     , Network.Packet.Server.Play
                     , Network.Util.FromIntegral
                     , Network.Util.MCString
                     , Network.Util.Packet
                     , Network.Util.SizePrefixed
                     , Network.Util.VarNum
                     , Util.Angle
                     , Util.Binary
                     , Util.BitSet
                     , Util.ByteOrder
                     , Util.Flatparse
                     , Util.NBT
                     , Util.NBT.Internal
                     , Util.Type
                     , Util.Vector.Packed
                     , Util.Vector.Internal
                     , Util.Linear.V2
                     , Util.Linear.V3
                     , Util.Position
                     , Util.Rotation
                     , Util.Word24
                     , Player.Internal
                     , World.Internal
executable LCraft
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       LCraft
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
test-suite LCraft-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       NBT.NBTSpec
  build-tool-depends:  sydtest-discover:sydtest-discover
  build-depends:       LCraft
                     , sydtest
                     , validity
                     , genvalidity
                     , genvalidity-sydtest
                     , genvalidity-text
                     , genvalidity-vector
                     , genvalidity-containers
                     , QuickCheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark NBT-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Util/NBT.hs
  build-depends:       criterion
                     , LCraft
                     , zlib
benchmark Packed-vector-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             PackedVector.hs
  build-depends:       criterion
                     , LCraft
benchmark Chunkloading-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Chunkloading.hs
  build-depends:       criterion
                     , LCraft
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N