cabal-version:       2.4
name:                LCraft
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.3

common common-options
-- TODO Go through deps soon-ish
  build-depends:       base ^>= 4.17.0.0
                     , data
                     , async
                     , stm
                     , stm-containers
                     , monad-control
                     , primitive
                     , text ^>= 2.0
                     , flatparse
                     , bytestring
                     , mason
                     , network
                     , network-simple
                     , template-haskell
                     , uuid
                     , vector
                     , containers
                     , zlib
                     , containers
                     , unordered-containers
                     , hashable
                     , deepseq
                     , transformers
                     , chronos
                     , optics
                     , bitfield
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       --Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
                       DataKinds
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
--if (arch(x86_64) || arch(i386))
  c-sources:          cbits/x86/countElems.c
--else
  --c-sources:         cbits/basic.c
  cc-options:          -O3
  exposed-modules:     LCraft
                      , Block.Position
                      , Command
                      , Command.Handler
                      , Command.Handler.Disconnect
                      , Command.Handler.Login
                      , Command.Handler.Movement
                      , Control.Monad.STM.Class
                      -- , Chunk
                      , Chunk.Internal
                      , Chunk.Position
                      , Chunk.Section
                      , Client
                      , Client.GameMode
                      , Client.Internal
                      , Dimension
                      , Dimension.Internal
                      , Entity.EntityId
                      -- , IO.ChunkCache
                      , IO.RegionFile
                      -- , Network
                      , Network.Connection
                      , Network.Exception
                      , Network.Handler
                      , Network.Monad
                      , Network.Packet.Client.Login
                      , Network.Packet.Client.Play
                      , Network.Packet.Client.Play.ChunkData
                      , Network.Packet.Client.Play.Login
                      , Network.Packet.Server.Handshake
                      , Network.Packet.Server.Login
                      , Network.Packet.Server.Play
                      , Network.Packet.Server.Play.ClientInformation
                      , Network.Packet.Server.Play.PlayerAbilities
                      , Network.Protocol
                      , Network.Util.Builder
                      , Network.Util.FromIntegral
                      , Network.Util.MCString
                      , Network.Util.Packet
                      , Network.Util.SizePrefixed
                      , Network.Util.VarNum
                      , Server
                      , Util.Angle
                      , Util.Binary
                      , Util.BitSet
                      , Util.ByteOrder
                      , Util.NBT
                      , Util.NBT.Internal
                      , Util.Vector.Packed
                      , Util.Vector.Internal
                      , Util.Linear.V2
                      , Util.Linear.V3
                      , Util.Linear.Vector
                      , Util.Position
                      , Util.PrimVar
                      , Util.Queue
                      , Util.Ring
                      , Util.Rotation
                      , Util.UUID
                      , Util.Word24
executable LCraft
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       LCraft
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2
test-suite LCraft-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       NBT.NBTSpec
  build-tool-depends:  sydtest-discover:sydtest-discover
  build-depends:       LCraft
                     , sydtest
                     , validity
                     , genvalidity
                     , genvalidity-sydtest
                     , genvalidity-text
                     , genvalidity-vector
                     , genvalidity-containers
                     , QuickCheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark NBT-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Util/NBT.hs
  build-depends:       tasty-bench
                     , LCraft
                     , zlib
benchmark Packed-vector-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             PackedVector.hs
  build-depends:       tasty-bench
                     , LCraft
benchmark Chunkloading-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Chunkloading.hs
  build-depends:       tasty-bench
                     , LCraft
  ghc-options:         -O2
benchmark VarInt-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             VarInt.hs
  build-depends:       tasty-bench
                     , LCraft
                     , random
                     , mwc-random
  ghc-options:         -O2
