cabal-version:       2.4
name:                brokkr-anvil
version:             0.0.0.0
synopsis:            Minecraft chunk data
description:         Minecraft chunk data
license:             MIT
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.4

common common-options
  build-depends:       base >= 4.17 && < 5
                     , brokkr-packed-vector
                     , brokkr-nbt
                     , vector
                     , bytestring
                     , flatparse
                     , mason
                     , zlib

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wunused-packages
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2
  default-extensions:  DerivingVia
                       LambdaCase
                       StrictData
                       OverloadedStrings
  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Brokkr.Anvil.Chunk
                       Brokkr.Anvil.Chunk.Section
                       Brokkr.Anvil.Chunk.Parser
                       Brokkr.Anvil.RegionFile
test-suite brokkr-anvil-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ChunkLoadSpec
  build-tool-depends:  sydtest-discover:sydtest-discover
  build-depends:       brokkr-anvil
                     , sydtest
                     , sydtest-hedgehog
                     , hedgehog
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark Chunkloading
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Chunkloading.hs
  build-depends:       tasty-bench
                     , brokkr-anvil
                     , brokkr-libdeflate
                     , deepseq
  ghc-options:         -O2
