cabal-version:       3.0
name:                brokkr-cesu8
version:             0.0.0.0
synopsis:            Library for dealing with cesu8 and modified utf8 data
description:         Library for dealing with cesu8 and modified utf8 data
license:             MIT
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2023 Jannis
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.4.4

common common-options
  build-depends:       base >= 4.17 && < 5
                     , bytestring
                     , deepseq
                     , template-haskell
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
                       -O2

  default-language:    GHC2021
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Brokkr.Cesu8
                     , Brokkr.Cesu8.Internal
                     , Brokkr.ModifiedUtf8
                     , Brokkr.ModifiedUtf8.Internal
  other-modules:       Brokkr.Common
  include-dirs:        cbits
  if (arch(x86_64) || arch(i386))
    c-sources:         cbits/x86/ModifiedUtf8.c
                       cbits/x86/Cesu8.c
  else
    c-sources:         cbits/Fallback.c
  cc-options:          -O3
test-suite brokkr-cesu8-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-tool-depends:  sydtest-discover:sydtest-discover
  build-depends:       brokkr-cesu8
                     , sydtest
                     , sydtest-hedgehog
                     , hedgehog
                     , text
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  other-modules:       ModifiedUtf8Spec
                       Cesu8Spec
benchmark brokkr-cesu8-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       tasty-bench
                     , brokkr-cesu8
                     , text
